@@ -866,18 +866,18 @@ DisplayLine(canvas, itemPtr, display, drawable, x, y, width, height)
     }
     linewidth = linePtr->outline.width;
     if (((TkCanvas *)canvas)->currentItemPtr == itemPtr) {
-	if (linePtr->outline.activeStipple!=None) {
+	if (linePtr->outline.activeStipple != None) {
 	    stipple = linePtr->outline.activeStipple;
 	}
-	if (linePtr->outline.activeWidth>linewidth) {
+	if (linePtr->outline.activeWidth != linewidth) {
 	    linewidth = linePtr->outline.activeWidth;
 	}
     } else if (state==TK_STATE_DISABLED) {
-	if (linePtr->outline.disabledStipple!=None) {
+	if (linePtr->outline.disabledStipple != None) {
 	    stipple = linePtr->outline.disabledStipple;
 	}
-	if (linePtr->outline.disabledWidth>linewidth) {
-	    linewidth = linePtr->outline.activeWidth;
+	if (linePtr->outline.disabledWidth != linewidth) {
+	    linewidth = linePtr->outline.disabledWidth;
 	}
     }
     /*
